CHANGES: • index_en.html: 	option 1. onmouseover - background image 생성 - issue >> 	background image un-resizable. 	option 2. onmouseover - div visibility: visible. - issue >> 	mouseover wouldn't work as it's covered by other layer of div.
• index_en_image.html: 
	z-idex changes onmouseover/onmousedown/onmouseout - z-index를 ++ 시켜서 전에 클릭했던 이미지가 두번째로 높은 zindex를 가질수 있게 할 수 있을까?? 

• la bella sample.html: 
	resizable !  - 안됌 ㅠㅠ 왜!! ㅠㅠㅠ 나느 왜 !! 
	draggable+resizable하면 좋을듯. 
	resizable일때 안에 이미지가 찌그러지지않게 유지.

--- a/css/style.css
+++ b/css/style.css
@@ -40,29 +40,6 @@ a:hover {
 }
 
 
-/* Index / Images
-***********************************************************************************************************/
-.image_container{
-	clear:both;
-	width:200x;
-	display:block;
-	position: relative;
-	margin-bottom:5px;
-	text-align:center !important;
-	z-index:-1;
-}
-
-#index_img{
-	max-width:95px !important;
-	height: auto;
-	margin-bottom:auto;
-	display:inline;
-}
-
-#thumbnail{
-	z-index:auto;
-}
-
 
 /* Menu / Navigation
 ***********************************************************************************************************/
@@ -112,7 +89,6 @@ a:hover {
 	position:absolute;
 	top:180px;
 	min-width:900px;
-	z-index:-20;
 }
 
 .entry {
@@ -127,19 +103,11 @@ a:hover {
 	border-top:dashed;
 	border-top-width:1px;
 	line-height:1.5;
-	cursor:crosshair;
-	width:200px;
-}
+	width:200px;}
 
-.content {
-	position:relative;
-	overflow:hidden !important;'
+.entry:hover {
+	cursor:e-resize;
 }
-
-.entry:hover{
-	border:dashed;
-	border-width:1px;
-	}
 
 .content {
 	padding:5px;
@@ -178,14 +146,14 @@ bottom: 5px;
 .description {
 	font-size:20px;
 	text-align:center !important;
-	font-family:
-'inconsolata';
-font-style:italic;
+	font-family: 'inconsolata';
+	font-style:italic;
 	line-height:32px;
 	word-spacing:-1px;
 	padding:10px;	
 	min-height:130px;
 	vertical-align:middle;
+	z-index:1;
 	}
 
 .title {
@@ -237,23 +205,8 @@ text-decoration:underline;
 
 
 
-	/* Opened columns
+	/* Draggable images
 ***********************************************************************************************************/
-
-.opened {
-	top:150px;
-	cursor: auto;
-	color: #414141;
-	padding-right: 2em;
-	overflow: scroll;
-}
-
-.opened .tools{
-	display: block;
-}
-.opened .postTags li, .opened .postAuthors li{
-	display: inline;
-}
 
 	
 .draggable {
@@ -263,6 +216,7 @@ text-decoration:underline;
 .draggable img{
 	width:500px;
 	height:auto;
+	z-index:0;
 }
 
 #draggable_container {
@@ -270,3 +224,22 @@ text-decoration:underline;
     width: 900px;
 	height: 500px;
 }
+
+/* for detailed page ****************************/
+#draggable_container_2 {
+	position:absolute;
+	top:190px;
+	left:265px;
+    width: 700px;
+	height: 500px;
+}
+
+.draggable_2 {
+	max-width:1000px;
+	width:600px;
+	position:relative;
+}
+.draggble_2 img{
+	width:100% !important;}
+
+
